--- a/front/package.json
+++ b/front/package.json
@@ -5,16 +5,22 @@
   "author": "seanstainability",
   "license": "MIT",
   "scripts": {
-    "dev": "next"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.16.9",
     "gravatar": "^1.8.1",
     "next": "^11.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
+    "react-redux": "^7.2.4",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
