--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
     "react-redux": "^7.2.4",
+    "react-slick": "^0.28.1",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0"
   },
