--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.16.9",
+    "axios": "^0.21.1",
+    "faker": "^5.5.3",
     "gravatar": "^1.8.1",
+    "immer": "^9.0.5",
     "next": "^11.0.1",
     "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
@@ -22,6 +25,8 @@
     "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
